--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       RABBITMQ_DEFAULT_PASS: rabbitmq
       MONGO_URI: mongodb://mongo:27017/
       DB_NAME: ipa2025
+      RABBITMQ_HOST: rabbitmq
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq/mnesia
     networks:
@@ -51,6 +52,7 @@ services:
       RABBITMQ_DEFAULT_PASS: rabbitmq
       MONGO_URI: mongodb://mongo:27017/
       DB_NAME: ipa2025
+      RABBITMQ_HOST: rabbitmq
     networks:
       - app-net
 
