--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./web
     ports:
       - "8080:8080"
+    file:
+      - .env
     depends_on:
       - mongo
     networks:
@@ -22,12 +24,14 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: rabbitmq
-      MONGO_URI: mongodb://mongo:27017/
-      DB_NAME: ipa2025
-      RABBITMQ_HOST: rabbitmq
+    # environment:
+    #   RABBITMQ_DEFAULT_USER: admin
+    #   RABBITMQ_DEFAULT_PASS: rabbitmq
+    #   MONGO_URI: mongodb://mongo:27017/
+    #   DB_NAME: ipa2025
+    #   RABBITMQ_HOST: rabbitmq
+    file:
+      - .env
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq/mnesia
     networks:
@@ -47,12 +51,14 @@ services:
       - mongo
       - scheduler
       - rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: rabbitmq
-      MONGO_URI: mongodb://mongo:27017/
-      DB_NAME: ipa2025
-      RABBITMQ_HOST: rabbitmq
+    # environment:
+    #   RABBITMQ_DEFAULT_USER: admin
+    #   RABBITMQ_DEFAULT_PASS: rabbitmq
+    #   MONGO_URI: mongodb://mongo:27017/
+    #   DB_NAME: ipa2025
+    #   RABBITMQ_HOST: rabbitmq
+    file:
+      - .env
     networks:
       - app-net
 
