--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,7 @@ jobs:
             echo "RABBITMQ_DEFAULT_PASS=${{ secrets.RABBITMQ_DEFAULT_PASS }}"
             echo "DB_NAME=${{ secrets.DB_NAME }}"
             echo "MONGO_URI=${{ secrets.MONGO_URI }}"
+            echo "RABBITMQ_HOST=${{ secrets. RABBITMQ_HOST }}"
           } > .env
           chmod 600 .env
 
