--- a/web/manifests/ingress.yaml
+++ b/web/manifests/ingress.yaml
@@ -6,12 +6,13 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
-        paths:
-          - path: /web
-            pathType: Prefix
-            backend:
-              service:
-                name: ipa2025-msapp-web-service
-                port:
-                  number: 80
+  - host: web.ipa.local
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: ipa2025-msapp-web-service
+              port:
+                number: 80
