--- a/worker/manifests/scaledobject.yaml
+++ b/worker/manifests/scaledobject.yaml
@@ -16,7 +16,7 @@ spec:
         queueName: router_jobs
         mode: QueueLength
         value: "10"
-        protocol: auto
+        protocol: amqp
         hostFromEnv: RABBITMQ_HOST 
         usernameFromEnv: RABBITMQ_DEFAULT_USER
         passwordFromEnv: RABBITMQ_DEFAULT_PASS
