--- a/worker/manifests/scaledobject.yaml
+++ b/worker/manifests/scaledobject.yaml
@@ -19,5 +19,5 @@ spec:
         protocol: auto
         host: "amqp://10.30.7.37:5672/"
         # hostFromEnv: RABBITMQ_HOST 
-        usernameFromEnv: RABBITMQ_DEFAULT_USER
-        passwordFromEnv: RABBITMQ_DEFAULT_PASS
+        # usernameFromEnv: RABBITMQ_DEFAULT_USER
+        # passwordFromEnv: RABBITMQ_DEFAULT_PASS
